--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ NEXT_PUBLIC_SUPABASE_URL=https://wbyjomvjpsuqlbhyxomy.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
+# Chat History Encryption (Phase 5-7)
+# チャット履歴暗号化キー（未設定の場合はNEXTAUTH_SECRETを使用）
+# 推奨: openssl rand -base64 32
+CHAT_ENCRYPTION_KEY=${NEXTAUTH_SECRET}
+
 # GitHub Feedback Integration (Phase 12)
 GITHUB_TOKEN=your_github_personal_access_token_here
 GITHUB_OWNER=your_github_username_here
