--- a/k8s/secret.template.yml
+++ b/k8s/secret.template.yml
@@ -19,3 +19,4 @@ stringData:
   ENCRYPTION_KEY_OLD: "YOUR_ENCRYPTION_KEY_OLD"
   # ブランチモード（開発・テスト環境のみ：本番環境では"false"または削除）
   ENABLE_MOCK_AUTH: "false"
+  CHAT_ENCRYPTION_KEY: "YOUR_CHAT_ENCRYPTION_KEY"
