--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,34 @@
-# Journee - 環境変数テンプレート
+# .env.example - 環境変数テンプレート
 
-# Base URL (Phase 10.2 - OGP画像用)
-# 本番環境: https://your-domain.com
-# 開発環境: http://localhost:3000
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-
-# AI API Keys
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# NextAuth.js
+# =========================================
+# 認証（NextAuth.js）
+# =========================================
+NEXTAUTH_SECRET=your-nextauth-secret-here
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret_here
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# Google Maps API
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# =========================================
+# AI API
+# =========================================
+GEMINI_API_KEY=your-gemini-api-key
 
-# Supabase (Phase 8)
-NEXT_PUBLIC_SUPABASE_URL=https://wbyjomvjpsuqlbhyxomy.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+# =========================================
+# データベース（Supabase）
+# =========================================
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# GitHub Feedback Integration (Phase 12)
-GITHUB_TOKEN=your_github_personal_access_token_here
-GITHUB_OWNER=your_github_username_here
-GITHUB_REPO=journee
+# =========================================
+# チャット履歴暗号化
+# =========================================
+# チャット履歴暗号化キー（未設定の場合はNEXTAUTH_SECRETを使用）
+# 推奨: openssl rand -base64 32
+CHAT_ENCRYPTION_KEY=${NEXTAUTH_SECRET}
+
+# =========================================
+# アプリケーション設定
+# =========================================
+NODE_ENV=development
+LOG_LEVEL=debug
