add: サーバーからpushする通知を追加

--- a/.env.local.example
+++ b/.env.local.example
@@ -17,3 +17,10 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 # APIキー暗号化用のキー（32文字以上のランダム文字列）
 # 生成方法: openssl rand -hex 32
 ENCRYPTION_KEY=your_random_encryption_key_here
+# Web Push (VAPID)
+# 公開鍵: フロントの PushManager.subscribe に渡す
+NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY=your_vapid_public_key_here
+# 秘密鍵: サーバーのみで保持
+WEB_PUSH_PRIVATE_KEY=your_vapid_private_key_here
+# 連絡先: mailto: を推奨 (VAPID JWT の sub)
+WEB_PUSH_CONTACT=mailto:you@example.com
