--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,11 +22,18 @@ COPY . .
 ARG NEXT_PUBLIC_SUPABASE_URL
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
 ARG NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
+ARG NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY
+ARG WEB_PUSH_PRIVATE_KEY
+ARG WEB_PUSH_CONTACT
 ARG NEXT_PUBLIC_ENABLE_MOCK_AUTH=false
+
 ENV NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
 ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
 ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
 ENV NEXT_PUBLIC_ENABLE_MOCK_AUTH=${NEXT_PUBLIC_ENABLE_MOCK_AUTH}
+ENV NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY=${NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY}
+ENV WEB_PUSH_PRIVATE_KEY=${WEB_PUSH_PRIVATE_KEY}
+ENV WEB_PUSH_CONTACT=${WEB_PUSH_CONTACT}
 
 # Build the application
 RUN npm run build
