--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "recharts": "^3.2.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "web-push": "^3.6.6",
     "zod": "^3.22.4",
     "zustand": "^4.5.7"
   },
