--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -79,8 +79,11 @@ jobs:
           build-args: |
             NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
             NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-            NEXT_PUBLIC_ENABLE_MOCK_AUTH=true
             NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}
+            NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY }}
+            WEB_PUSH_PRIVATE_KEY=${{ secrets.WEB_PUSH_PRIVATE_KEY }}
+            WEB_PUSH_CONTACT=${{ secrets.WEB_PUSH_CONTACT }}
+            NEXT_PUBLIC_ENABLE_MOCK_AUTH=true
 
   update-deployment-manifest:
     runs-on: ubuntu-latest
