--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
+    "@types/web-push": "^3.6.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.8",
