--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -44,6 +44,14 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
+# Set runtime environment variables
+ARG WEB_PUSH_PRIVATE_KEY
+ARG WEB_PUSH_CONTACT
+ARG NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY
+ENV WEB_PUSH_PRIVATE_KEY=${WEB_PUSH_PRIVATE_KEY}
+ENV WEB_PUSH_CONTACT=${WEB_PUSH_CONTACT}
+ENV NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY=${NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY}
+
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
