add: 監視対象ファイルにk8s manifestを追加

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,7 @@ on:
       - "tsconfig.json"
       - "postcss.config.js"
       - "Dockerfile.prod"
+      - "k8s/manifests/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
