--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,21 +5,21 @@ on:
   push:
     branches-ignore:
       - main
-    paths:
-      - "app/**"
-      - "components/**"
-      - "lib/**"
-      - "types/**"
-      - "public/**"
-      - "middleware.ts"
-      - "package.json"
-      - "package-lock.json"
-      - "next.config.js"
-      - "tailwind.config.ts"
-      - "tsconfig.json"
-      - "postcss.config.js"
-      - "Dockerfile.prod"
-      - "k8s/manifests/**"
+    # paths:
+    #   - "app/**"
+    #   - "components/**"
+    #   - "lib/**"
+    #   - "types/**"
+    #   - "public/**"
+    #   - "middleware.ts"
+    #   - "package.json"
+    #   - "package-lock.json"
+    #   - "next.config.js"
+    #   - "tailwind.config.ts"
+    #   - "tsconfig.json"
+    #   - "postcss.config.js"
+    #   - "Dockerfile.prod"
+    #   - "k8s/manifests/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
