fix: 不要なe2e testを削除し、すべてのe2e testが通るように修正

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test:coverage": "jest --coverage",
     "e2e:seed": "npx tsx scripts/seed-e2e-data.ts",
     "e2e:test": "playwright test",
-    "e2e:test:ui": "playwright test --ui",
-    "e2e:test:debug": "playwright test --debug",
+    "e2e:show": "playwright show-report",
+    "e2e:test:trace": "playwright test --trace on",
     "e2e:test:all": "npm run test && npm run test:e2e",
     "docker:start": "bash scripts/docker-dev.sh start",
     "docker:stop": "bash scripts/docker-dev.sh stop",
