--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,14 +82,6 @@ jobs:
           else
             echo "⚠️ No test report generated" >> $GITHUB_STEP_SUMMARY
           fi
-        
-      # PRにコメントを投稿
-      - name: Comment PR with test results
-        if: always() && github.event_name == 'pull_request'
-        uses: daun/playwright-report-comment@v3
-        with:
-          report-path: playwright-report
-          report-url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           
       - uses: actions/upload-artifact@v4
         if: always()
@@ -97,3 +89,63 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+  
+  # ここからレポートpush処理
+  # 参考: https://zenn.dev/leaner_dev/articles/88272c891d4fb5
+  publish_report:
+    name: Publish Report
+    # always() だとワークフローをキャンセルした場合も実行されてしまうので、明示的に指定する
+    if: "success() || needs.e2e.result == 'failure'"
+    needs: [e2e]
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    env:
+      # ワークフロー実行ごとに一意となるパスを組み立てる
+      HTML_REPORT_URL_PATH: reports/${{ github.ref_name }}/${{ github.run_id }}/${{ github.run_attempt }}
+    steps:
+      - name: Checkout GitHub Pages Branch
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+
+      - name: Set Git User
+        # GitHub Actions botとしてレポート追加のコミットを作成する
+        # See: https://github.com/orgs/community/discussions/26560
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Download zipped HTML report
+        uses: actions/download-artifact@v3
+        with:
+          name: playwright-report
+          path: ${{ env.HTML_REPORT_URL_PATH }}
+
+      - name: Push HTML Report
+        timeout-minutes: 3
+        # gh-pagesブランチにレポート追加のコミットをpushできるまでrebase, pushを繰り返す
+        # 異なるPRで同時にCIが走った場合など、このジョブが同時に実行される場合でも全てのレポートをpushするために必要
+        run: |
+          git add .
+          git commit -m "workflow: add HTML report for run-id ${{ github.run_id }} (attempt:  ${{ github.run_attempt }})"
+
+          while true; do
+            git pull --rebase
+            if [ $? -ne 0 ]; then
+              echo "Failed to rebase. Please review manually."
+              exit 1
+            fi
+
+            git push
+            if [ $? -eq 0 ]; then
+              echo "Successfully pushed HTML report to repo."
+              exit 0
+            fi
+          done
+
+      - name: Output Report URL as Worfklow Annotation
+        # レポートのGitHub PagesのURLを出力する
+        run: |
+          FULL_HTML_REPORT_URL=https://mishiwata1015.github.io/playwright-report-to-gh-pages/$HTML_REPORT_URL_PATH
+
+          echo "::notice title=📋 Published Playwright Test Report::$FULL_HTML_REPORT_URL"
