--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: Playwright E2E Tests
+run-name: ${{ github.event.head_commit.message || github.event.pull_request.title }}
 
 on:
   pull_request:
@@ -33,7 +34,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9  # 使用するpnpmのバージョンを指定
+          version: 10  # 使用するpnpmのバージョンを指定
 
       - uses: actions/setup-node@v6
         with:
@@ -48,20 +49,20 @@ jobs:
         run: echo "version=$(node -p "require('./pnpm-lock.yaml').packages['node_modules/@playwright/test'].version")" >> $GITHUB_OUTPUT
         # echo "version=$(node -p "require('./package-lock.json').packages['node_modules/@playwright/test'].version")" >> $GITHUB_OUTPUT
       
-      - name: Cache Playwright browsers
-        uses: actions/cache@v5
-        id: playwright-cache
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-browsers-${{ runner.os }}-${{ steps.playwright-version.outputs.version }}
+      # - name: Cache Playwright browsers
+      #   uses: actions/cache@v5
+      #   id: playwright-cache
+      #   with:
+      #     path: ~/.cache/ms-playwright
+      #     key: playwright-browsers-${{ runner.os }}-${{ steps.playwright-version.outputs.version }}
       
       - name: Install Playwright browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        # if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: pnpm playwright install --with-deps
       
-      - name: Install Playwright system dependencies
-        if: steps.playwright-cache.outputs.cache-hit == 'true'
-        run: pnpm playwright install-deps
+      # - name: Install Playwright system dependencies
+      #   if: steps.playwright-cache.outputs.cache-hit == 'true'
+      #   run: pnpm playwright install-deps
         
       - name: Run E2E tests
         id: playwright-tests
