--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
       
       - name: Get Playwright version
         id: playwright-version
-        key: playwright-browsers-${{ runner.os }}-${{ steps.playwright-version.outputs.version }}-${{ env.PLAYWRIGHT_BROWSERS }}      
-
+        run: echo "version=$(node -p "require('./pnpm-lock.yaml').packages['node_modules/@playwright/test'].version")" >> $GITHUB_OUTPUT
+      
       - name: Cache Playwright browsers
         uses: actions/cache@v5
         id: playwright-cache
@@ -66,7 +66,7 @@ jobs:
       - name: Run E2E tests
         id: playwright-tests
         continue-on-error: true
-        run: npx playwright test --trace on
+        run: npx playwright test
       
       # GitHub Summaryに結果を出力
       - name: Generate test summary
