--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,21 +31,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          version: 10  # 使用するpnpmのバージョンを指定
-
-      - uses: actions/setup-node@v6
-        with:
-          node-version: '24'
-          cache: 'pnpm'
+          bun-version: latest  # または特定のバージョン (例: '1.1.34')
           
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: bun install --frozen-lockfile
       
       - name: Get Playwright version
         id: playwright-version
-        run: echo "version=$(node -p "require('./pnpm-lock.yaml').packages['node_modules/@playwright/test'].version")" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=$(bunx playwright --version | grep -oP 'Version \K[0-9.]+')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
       
       - name: Cache Playwright browsers
         uses: actions/cache@v5
@@ -56,16 +53,16 @@ jobs:
       
       - name: Install Playwright browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: pnpm playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
+        run: bunx playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
       
       - name: Install Playwright system dependencies
         if: steps.playwright-cache.outputs.cache-hit == 'true'
-        run: pnpm playwright install-deps chromium
+        run: bunx playwright install-deps ${{ env.PLAYWRIGHT_BROWSERS }}
         
       - name: Run E2E tests
         id: playwright-tests
         continue-on-error: true
-        run: npx playwright test
+        run: bunx playwright test
       
       # GitHub Summaryに結果を出力
       - name: Generate test summary
@@ -150,8 +147,8 @@ jobs:
       - name: Output Report URL as Workflow Annotation and PR Comment
         if: github.event_name == 'pull_request'
         run: |
-          FULL_HTML_REPORT_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/$HTML_REPORT_URL_PATH
-          
+          FULL_HTML_REPORT_URL=https://${{ github.repository_owner }}.github.io/$(echo ${{ github.repository }} | cut -d'/' -f2)/$HTML_REPORT_URL_PATH
+
           echo "::notice title=📋 Published Playwright Test Report::$FULL_HTML_REPORT_URL"
           
           # PRコメントを追加
