--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest  # または特定のバージョン (例: '1.1.34')
+          bun-version: latest
           
       - name: Install dependencies
         run: bun install --frozen-lockfile
