fix: 凡ミスを修正

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,3 +1,12 @@
+name: Playwright CI Benchmark
+
+on:
+  push:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   # Step 1: キャッシュを事前に準備するジョブ
   prepare-cache:
