--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -3,6 +3,12 @@ name: Playwright CI Benchmark
 on:
   pull_request:
 
+# PRへの書き込み権限を付与
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
+  
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -26,15 +32,15 @@ jobs:
       
       - name: Setup Node.js for pnpm/npm
         if: matrix.package-manager != 'bun'
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: '20'
+          node-version: '24'
       
       - name: Setup pnpm
         if: matrix.package-manager == 'pnpm'
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10
 
       # Dependencies Cache
       - name: Get cache paths
