--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -183,6 +183,7 @@ jobs:
             ${{ steps.cache-paths.outputs.dir }}
             node_modules
           key: ${{ runner.os }}-${{ matrix.package-manager }}-${{ hashFiles(format('**/{0}', steps.cache-paths.outputs.lockfile)) }}
+          fail-on-cache-miss: true
           
       - name: Install dependencies
         run: |
@@ -218,6 +219,7 @@ jobs:
         with:
           path: ~/.cache/ms-playwright
           key: playwright-browsers-${{ runner.os }}-${{ steps.playwright-version.outputs.version }}-chromium
+          fail-on-cache-miss: true
       
       - name: Install Playwright system dependencies
         run: |
